# sphinx-multiversion-contrib

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  DEVELOPMENT.rst  LICENSE.rst  README.rst  about.html  authors.html  changelog.html  configuration.html  context.html  faq.html  genindex.html  github_pages.html  index.html  install.html  license.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  tag-from-pipeline.sh  templates.html  tox.ini
.github/workflows/: ci.yml  publish.yml  tag_and_release.yml
_static/: documentation_options.js  index.html
docs/: changelog.rst  conf.py  faq.rst  index.rst  install.rst  quickstart.rst
requirements/: base.txt  constraints.txt  docs.txt  test.txt
sphinx_multiversion/: __init__.py  main.py
src/sphinx_multiversion/: __init__.py  __main__.py  git.py  main.py  sphinx.py
tests/: test_sphinx.py
versions/0.3.1/: .buildinfo  about.html  authors.html  changelog.html  configuration.html  context.html  faq.html  genindex.html  index.html  install.html  license.html  quickstart.html  search.html  searchindex.js  templates.html
versions/0.3.2/: .buildinfo  about.html  authors.html  changelog.html  configuration.html  context.html  faq.html  genindex.html  index.html  install.html  license.html  objects.inv  quickstart.html  search.html  searchindex.js  templates.html
versions/0.3.2/_sources/: configuration.rst.txt  templates.rst.txt
