[build-system]
requires = ["setuptools>=65.4.1", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"


[project]
name = "sphinx-multiversion-contrib"
dynamic = ["version"]
description = "Add support for multiple versions to sphinx"
authors = [{name = "IQM Finland Oy", email = "developers@meetiqm.com"}]
readme = "README.rst"
license = {file = "LICENSE.rst"}
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.9, <3.11"
dependencies = [
    "sphinx >= 4.5.0"
]

[project.urls]
homepage = "https://github.com/iqm-finland/sphinx-multiversion-contrib"
documentation = "https://iqm-finland.github.io/sphinx-multiversion-contrib"
repository = "https://github.com/iqm-finland/sphinx-multiversion-contrib.git"
changelog = "https://github.com/iqm-finland/sphinx-multiversion-contrib/blob/main/CHANGELOG.rst"

[project.optional-dependencies]
# Add here additional requirements for extra features, to install with:
# `pip install iqm-cortex-cli[dev,docs,test]`
dev = [
    "tox == 4.4.6"
]
test = [
    "black == 22.12.0",
    "isort == 5.12.0",
    "mypy == 0.991",
    "pylint == 2.17.0",
    "pytest == 7.1.2",
    "pytest-cov == 3.0.0",
    "mockito == 1.2.2",  # TODO: Chek if this dependency is needed
    "types-requests == 2.28.9"  # TODO: Chek if this dependency is needed
]
docs = [
    "sphinx-book-theme == 0.3.3"
]
cicd = [
    "twine ~= 4.0"
]


[project.scripts]
sphinx-multiversion = "sphinx_multiversion:main"


[tool.setuptools_scm]
version_scheme = "no-guess-dev"
write_to = "version.txt"

[tool.pytest.ini_options]
pythonpath = "src"
norecursedirs = [
    ".github",
    ".mypy_cache",
    ".tox",
    "build",
    "docs",
    "venv"
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:xarray",
    "ignore::DeprecationWarning:distutils",
    "ignore::FutureWarning:numpy"
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py311"]
extend-exclude = "_pb2.py$"

[tool.coverage.run]
branch = true
source = ["sphinx_multiversion"]

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    'if self\.debug',

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.isort]
# Make isort and black compatible
profile = "black"
line_length = 120
balanced_wrapping = true
force_sort_within_sections = true
reverse_relative = true
group_by_package = true

[tool.mypy]
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "sphinx_multiversion",
]
ignore_missing_imports = true

[tool.pylint.main]
disable = [
    "abstract-method",
    "duplicate-code",
    "fixme",
    "invalid-name",
    "protected-access",
    "too-few-public-methods",
]
extension-pkg-whitelist = ["pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.similarities]
ignore-imports = true

[tool.pylint.string]
check-quote-consistency = true
